# python3

./: .gitignore  README.md  pyproject.toml
Microsoft AI School/: README.md
Microsoft AI School/Second Project - 살펴드림/: .funcignore  .gitignore  README.md  local.settings.json  requirements.txt  test.py  내대본.txt
Microsoft AI School/flaskr/: .env  README.md  __init__.py  config.py  form.py  models.py
Microsoft AI School/flaskr/templates/components/: base.html
Microsoft AI School/flaskr/views/: auth.py  board.py  main.py  post.py
django-tutorial/: README.md  db.sqlite3
django-tutorial/mysite/: settings.py
django-tutorial/polls/: urls.py  views.py
django-tutorial/polls/templates/polls/: detail.html  index.html
flask-tutorial/: .env  db.py
flask-tutorial/templates/auth/: login.html  register.html
flaskr/: .env  __init__.py  config.py  form.py  models.py
flaskr/templates/: board.html  index.html  post_write.html  signup.html
flaskr/templates/components/: navbar.html
flaskr/views/: board.py  post.py
flaskr2/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr2/templates/: base.html
flaskr2/templates/blog/: create.html  index.html
michigety-django-tutorial/: README.md
michigety-django-tutorial/polls/: admin.py  views.py
processing-files/pdf/: README.md  main.py
